--- a/notebook/Configure-Permissions.json
+++ b/notebook/Configure-Permissions.json
@@ -2,7 +2,7 @@
 	"name": "Configure-Permissions",
 	"properties": {
 		"folder": {
-			"name": "includes"
+			"name": "Includes"
 		},
 		"nbformat": 4,
 		"nbformat_minor": 2,
