Includes aangepast naar correcte paden

--- a/notebook/DE 11-2L - Configuring Privileges for Production Data and Derived Tables Lab.json
+++ b/notebook/DE 11-2L - Configuring Privileges for Production Data and Derived Tables Lab.json
@@ -65,7 +65,7 @@
 			{
 				"cell_type": "code",
 				"source": [
-					"%run ../Includes/Classroom-Setup-11.2L"
+					"%run /Includes/Classroom-Setup-11.2L"
 				],
 				"execution_count": null
 			},
